update for urolige Daniel

--- a/RoVi2-finalProject/CMakeLists.txt
+++ b/RoVi2-finalProject/CMakeLists.txt
@@ -29,7 +29,8 @@ MESSAGE("-- Build type: " ${CMAKE_BUILD_TYPE})
 
 # Use RobWork
 MESSAGE("-- RobWork root: " ${RW_ROOT})
-SET(RobWork_DIR ${RW_ROOT}/cmake) 
+SET(RobWork_DIR ${RW_ROOT}/cmake)
+MESSAGE("-- RobWork_DIR:" ${RobWork_DIR})
 FIND_PACKAGE(RobWork REQUIRED)
 INCLUDE_DIRECTORIES( ${ROBWORK_INCLUDE_DIRS} )
 LINK_DIRECTORIES( ${ROBWORK_LIBRARY_DIRS} )
@@ -37,6 +38,7 @@ LINK_DIRECTORIES( ${ROBWORK_LIBRARY_DIRS} )
 # Use RobWorkStudio
 MESSAGE("-- RobWorkStudio root: " ${RWSTUDIO_ROOT})
 SET(RobWorkStudio_DIR ${RWSTUDIO_ROOT}/cmake)
+MESSAGE("-- RobWorkStudio_DIR:" ${RobWorkStudio_DIR})
 FIND_PACKAGE(RobWorkStudio REQUIRED)
 INCLUDE_DIRECTORIES( ${ROBWORKSTUDIO_INCLUDE_DIRS} )
 LINK_DIRECTORIES( ${ROBWORKSTUDIO_LIBRARY_DIRS} )
